# zj-radar

./: .gitignore  .report-port.md  .report-reapply.md  AGENTS.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  SECURITY.md  STAGE4-report.md  build.rs  deny.toml  findings.md  flake.nix  justfile
.claude-plugin/: marketplace.json
.claude/skills/cleanup-pass/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/nightly-failure-issue/: action.yml
.github/workflows/: ci.yml  e2e.yml  funnel.yml  release.yml
.superpowers/sdd/: ff-task2-report.md  ff-task3-report.md  task-2-report.md  task-3-report.md
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: agents.rs  fsutil.rs  layout.rs  lib.rs  main.rs  notify.rs  run.rs  setup.rs
crates/cli/src/agents/: claude.rs  codex.rs
crates/cli/src/run_assets/: config.kdl  radar-onboarding.kdl  radar.kdl
crates/cli/src/setup/: analyze.rs  check.rs  claude.rs  codex.rs  detect.rs  download.rs  edit.rs  mod.rs  preseed.rs  zellij.rs
crates/cli/tests/: cli.rs  cli_notify.rs  cli_setup.rs  run_cli.rs
crates/cli/tests/support/: mod.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: command.rs  kind.rs  lib.rs  observation.rs  payload.rs  pipe.rs  status.rs  wire.rs
crates/core/src/command/: tests.rs
crates/plugin/: Cargo.toml
crates/plugin/proptest-regressions/radar_state/: tests.txt
crates/plugin/proptest-regressions/rollup/: tests.txt
crates/plugin/src/: clock.rs  config.rs  control.rs  ledger.rs  lib.rs  main.rs  notify_rules.rs  permission.rs  presence.rs  radar_state.rs  reference_tests.rs  render.rs  rollup.rs  runtime.rs  session_files.rs  sessions.rs  status_store.rs  tab_namer.rs  test_fixtures.rs  theme.rs
crates/plugin/src/radar_state/: snapshot.rs  tests.rs
crates/plugin/src/render/: layout.rs  test_util.rs  tests.rs
crates/plugin/src/render/snapshots/: zj_radar_plugin__render__tests__canonical_cards_grid.snap  zj_radar_plugin__render__tests__canonical_tint_map.snap  zj_radar_plugin__render__tests__cards_light_theme_grid.snap  zj_radar_plugin__render__tests__cards_light_theme_tint.snap  zj_radar_plugin__render__tests__cards_multi_pane_grid.snap  zj_radar_plugin__render__tests__cards_multi_pane_tint.snap  zj_radar_plugin__render__tests__cards_narrow_width_grid.snap  zj_radar_plugin__render__tests__cards_nerd_glyphs_grid.snap  zj_radar_plugin__render__tests__overflow_fold_grid.snap
crates/plugin/src/rollup/: tests.rs
crates/plugin/src/runtime/: tests.rs
crates/plugin/tests/e2e/: harness.rs  main.rs
demo/: README.md  agent.sh  banner.sh  config.kdl  demorc.sh  hero.tape  layout.kdl  record.sh
dev/: build.sh  dev.kdl  reload.sh  run.sh  start.sh
docs/: TOOLCHAIN.md  cli-design.md  cli-plan.md  config-design.md  config-plan.md  configuration.md  design.md  distribution.md  install.md  plan.md  producers.md  rail-reference.md  rich-tab-signals-design.md  rich-tab-signals-plan.md  smart-tabs-postmortem.md  troubleshooting.md  ui-design-brief.md
docs/prompts/: review.md
docs/superpowers/plans/: 2026-06-26-gutter-rail-sidebar.md  2026-06-27-cli-notify-setup.md  2026-06-27-sidebar-fast-follows.md  2026-06-27-sidebar-install-distribution.md  2026-06-27-test-harness.md  2026-06-28-deepen-rail-seam.md  2026-06-28-radar-state.md  2026-06-29-cmd-pipe-attention-nav.md  2026-06-29-rail-line-unit.md  2026-06-29-run-turnkey-onboarding.md
docs/superpowers/specs/: 2026-06-26-zj-agents-gutter-rail-design.md  2026-06-27-cli-notify-setup-design.md  2026-06-27-command-activity-design.md  2026-06-27-sidebar-install-distribution-design.md  2026-06-27-test-harness-design.md  2026-06-29-cmd-pipe-attention-nav-design.md  2026-06-29-rail-readability-design.md  2026-06-29-recede-while-focused-design.md  2026-06-29-run-turnkey-onboarding-design.md
examples/: radar-sidebar.kdl  radar-template-snippet.kdl
plans/: project-seam.md
plugins/zj-agents-claude/: README.md
plugins/zj-agents-claude/.claude-plugin/: plugin.json
plugins/zj-agents-claude/hooks/: hooks.json
plugins/zj-agents-claude/scripts/: notify.sh
plugins/zj-radar-claude/: README.md
plugins/zj-radar-claude/.claude-plugin/: plugin.json
plugins/zj-radar-claude/hooks/: hooks.json
plugins/zj-radar-claude/scripts/: notify.sh
plugins/zj-radar-claude/tests/: helper.bash  notify.bats  parity.bats
proptest-regressions/: render.txt
scripts/: drive_zellij.py  funnel.sh  install.sh
scripts/tests/: install.bats
src/: command.rs  config.rs  kind.rs  lib.rs  main.rs  model.rs  naming.rs  notify_rules.rs  observation.rs  payload.rs  radar_state.rs  reference_tests.rs  render.rs  rollup.rs  runtime.rs  session_files.rs  state.rs  status.rs  status_store.rs  tab_namer.rs  theme.rs  wire.rs
src/cli/: codex.rs  events.rs  fsutil.rs  layout.rs  mod.rs  notify.rs  run.rs  setup.rs
src/cli/agents/: claude.rs  mod.rs
src/cli/run_assets/: config.kdl  radar-onboarding.kdl  radar.kdl
src/snapshots/: zj_radar__render__tests__canonical_cards_grid.snap  zj_radar__render__tests__canonical_cards_raw.snap  zj_radar__render__tests__canonical_tint_map.snap  zj_radar__render__tests__cards_light_theme_tint.snap  zj_radar__render__tests__cards_multi_pane_grid.snap  zj_radar__render__tests__cards_multi_pane_tint.snap  zj_radar__render__tests__cards_narrow_width_grid.snap  zj_radar__render__tests__cards_nerd_glyphs_grid.snap  zj_radar__render__tests__overflow_fold_grid.snap
tests/: cli.rs  cli_notify.rs  cli_setup.rs  run_cli.rs
tests/e2e/: harness.rs  main.rs
tests/support/: mod.rs
