[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "crates/plugin"]

[workspace.package]
version = "0.1.0-rc.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/marktoda/zj-radar"

[workspace.dependencies]
zj-radar-core = { path = "crates/core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"
clap = { version = "4", features = ["derive"] }
toml_edit = "0.22"
dirs = "5"
proptest = "1"
insta = { version = "1", features = ["filters"] }
vt100 = "0.15"
assert_cmd = "2"
assertables = "9"
tempfile = "3"
portable-pty = "0.8"

# Size-optimize the wasm artifact (workspace-root profiles apply to all members;
# only the wasm release build is shipped, so this is effectively plugin-only).
[profile.release]
opt-level = "z"   # optimize for size
lto = true        # cross-crate inlining + dead-code elimination
codegen-units = 1 # better optimization at the cost of build parallelism
strip = true      # drop symbols/debuginfo from the shipped wasm
