[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "crates/plugin"]

[workspace.package]
version = "0.1.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/marktoda/zj-radar"
# Floor set by the dependency tree (`kdl` 6.x declares 1.95; clap 4.6 needs
# edition2024 ≥ 1.85), not by our own code. CI's `msrv` job builds with
# exactly this toolchain, so the claim stays honest — bump it there-and-here
# by editing only this line (the job reads it from this file).
rust-version = "1.95"

[workspace.dependencies]
# `version` is required alongside `path` so the CLI is publishable to
# crates.io — `cargo publish` rejects a path dep on a workspace member that
# carries no version requirement. Local builds use `path`. Pinned EXACT
# (`=x.y.z`): core is an internal crate whose API is allowed to change within
# a 0.1.x line (0.1.2 already broke 0.1.0's `to_wire`), so a caret/minor range
# would let an older published CLI resolve a newer, incompatible core and stop
# compiling. Bump this in lockstep with [workspace.package] version — the
# release checklist (RELEASING.md) walks through it.
zj-radar-core = { path = "crates/core", version = "=0.1.4" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"
clap = { version = "4", features = ["derive"] }
# `kdl` (v1-fallback) backs the CLI's `setup`/`layout` KDL parsing. The CLI crate
# depends on it directly; the wasm plugin never does.
kdl = { version = "6", features = ["v1-fallback"] }
toml_edit = "0.22"
dirs = "5"
insta = { version = "1", features = ["filters"] }
proptest = "1"
vt100 = "0.15"
assert_cmd = "2"
assertables = "9"
tempfile = "3"
portable-pty = "0.8"

# Size-optimize the wasm artifact (workspace-root profiles apply to all members;
# only the wasm release build is shipped, so this is effectively plugin-only).
[profile.release]
opt-level = "z"   # optimize for size
lto = true        # cross-crate inlining + dead-code elimination
codegen-units = 1 # better optimization at the cost of build parallelism
strip = true      # drop symbols/debuginfo from the shipped wasm
