# The Zellij sidebar plugin (wasm32-wasip1). Zellij loads plugins as WASI
# *command* modules — it calls the wasm `_start` export, then `load`/`render`. A
# cdylib builds a *reactor* (no `_start`), which Zellij can't load, so this is a
# BINARY crate: `register_plugin!`'s generated `fn main` becomes `_start`.
#
# All real logic lives in the `zj_radar_plugin` lib; the binary (`src/main.rs`)
# is only the macro wiring. Build with: cargo build --target wasm32-wasip1 -p zj-radar-plugin
[package]
name = "zj-radar-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The zj-radar Zellij sidebar plugin (wasm). Companion to the zj-radar CLI."
repository.workspace = true
publish = false

[lib]
name = "zj_radar_plugin"

[[bin]]
name = "zj_radar"
path = "src/main.rs"

[dependencies]
zj-radar-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
unicode-width = { workspace = true }

# Zellij's plugin SDK is only used by the wasm `_start`/`load`/`render` wiring
# (all `#[cfg(target_arch = "wasm32")]`). Scoping it to the wasm target keeps
# its native transitive chain (zellij-utils → isahc → curl → openssl-sys) out
# of host builds. Pinned exact: the plugin ABI is unstable across zellij-tile
# releases and there is no runtime version handshake (a skewed build loads as
# a blank rail) — bump deliberately, alongside the supported-version docs.
[target.'cfg(target_arch = "wasm32")'.dependencies]
zellij-tile = "=0.44.3"

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
vt100 = { workspace = true }
tempfile = { workspace = true }
portable-pty = { workspace = true }

[[test]]
name = "e2e"
path = "tests/e2e/main.rs"
required-features = ["e2e"]

[features]
# Live end-to-end tests that drive a real Zellij in a PTY. Off by default so
# `cargo test` stays fast and hermetic. Requires `zellij` on PATH.
e2e = []
